TestVision instructions update

--- a/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
@@ -49,18 +49,18 @@
     <div id="tab-0" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
         <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 15px; height: auto; background-color: #fafafa;">
             <span style="color: #079C97;"><h5>What is TestVision?</h5></span>
-            <p>TestVision is testing software that fully serves the examination process. It is a comprehensive testing system that supports you in developing, administering, grading and analyzing tests. TestVision is developed by Teelen, an educational consultancy that focuses entirely on learning and testing.</p>
+            <p>TestVision is testing software that serves the examination process. It is a comprehensive testing system that supports you in developing, administering, grading, and analyzing tests. TestVision is developed by Teelen, an educational consultancy that focuses entirely on learning and testing.</p>
             <p>We recommend the use of TestVision because:
                 <ul>
-                    <li>There will be technical guidance present during the exam. Therefore students aren't able to plagiarise or fraud during the exam.</li>
-                    <li>In creating the exam, teachers only have to fill in (edit) questions and no longer have to deal with all the technical aspects of a test. Questions can easily be changed by the teacher until the last moment, provided that no major changes are being made such as adding new questions or changing the entire structure of the exam (in which case you will need to communicate these changes at least 1 week before the exam).</li>
-                    <li>All score results will directly be visible within your Final Grades menu, teachers no longer need to work with an export/import of grades.</li>
+                    <li>There will be technical guidance present during the exam. Therefore, students aren't able to plagiarize or commit fraud during the exam.</li>
+                    <li>In creating the exam, teachers only have to edit questions and no longer have to deal with all the technical aspects of a test. Questions can easily be changed by the teacher until the last moment, provided that no major changes are being made. For instance, when new questions need to be added or the entire structure of the exam needs to change you will need to communicate these changes with ICTO at least 1 week before the exam.</li>
+                    <li>All results will directly be visible within your Final Grades menu: teachers no longer need to work with an export or import of grades.</li>
                 </ul>
             </p>
         </div>
         <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 15px; height: auto; background-color: #fafafa;">
             <span style="color: #079C97;"><h5>Applying for a TestVision exam</h5></span>
-            <p>Notify your <b>programme coordinator</b> as early as possible. The programme coordinators will schedule the exam to the roster and thereafter send a request to ICTO. Our team must book in all details according to the roster at least 7 weeks before the start of the test/retake/inspection.</p>
+            <p>Notify your <b>programme coordinator</b> as early as possible. Programme coordinators are in charge of scheduling the exam and sending a request to ICTO. Our team must book in all details according to the roster at least 7 weeks before the start of the test, retake or inspection.</p>
             <p>The following deadlines apply:
                 <ul>
                     <li>Exams in block 1 --- August, 12</li>
@@ -73,13 +73,13 @@
         <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 15px; height: auto; background-color: #fafafa;">
             <span style="color: #079C97;"><h5>What do I need to do?</h5></span>
             <p>The ICTO team sets up a copy of last year's exam with copies of last year's questions and test settings – or if this is your first time, we'll set up concept questions and assign basic settings to the exam.</p>
-            <p>Teachers are solely responsible for creating (modifying) the questions in TestVision. Questions can be changed by teachers until the last moment. A request for adding new questions to the test or changing test settings can be sent to ICTO up to one week before the start of the test. After the 1 week deadline, teachers can also work with this independently with detailed instructions.</p>
+            <p>Teachers are solely responsible for modifying the questions in TestVision. Questions can be changed by teachers until the last moment. A request for adding new questions to the test or changing test settings can be sent to ICTO up to one week before the start of the test. After this deadline, teachers can also do these things themselves with the help of a detailed instructions.</p>
         </div>
         <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 15px; height: auto; background-color: #fafafa;">
             <span style="color: #079C97;"><h5>Book an appointment with us!</h5></span>
-            <p>We have heard from teachers that an (online or onsite) appointment of 15-20 minutes works best: there is time to ask questions, to pass on changes and wishes regarding the test and to go through the qeustion menu in TestVision together with ICTO. A meeting with ICTO gives the teacher some security and we often hear: "actually, it's not that bad". So please do not hesistate to drop by our office, email us or book an appointment. Take a look at our <a href="https://canvas.uva.nl/courses/8175/pages/contact">contact page</a> to get in contact with us.</p>
+            <p>We have heard from teachers that an (online or onsite) appointment of 15-20 minutes works best: there is time to ask questions, to pass on changes and wishes regarding the test, and to go through the question menu in TestVision together with ICTO. A meeting with ICTO gives teachers some security and we often hear: "Actually, it's not that bad". So please do not hesistate to drop by our office, email us or book an appointment. Take a look at our <a href="https://canvas.uva.nl/courses/8175/pages/contact">contact page</a> to get in touch with us.</p>
         </div>
-        <p>&nbsp;</p>
+
     </div>
 
     <div id="tab-1" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 5px; padding-bottom: 50px;">
@@ -115,7 +115,7 @@
                             <p><span style="font-size: 12pt;"><a style="color: #079C97;" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-questions-and-test">How to modify questions and preview the exam settings</a></span></p>
                         </td>
                         <td style="width: 33.3033%; height: auto; text-align: center;">
-                            <p><span style="font-size: 12pt;"><a style="color: #079C97;" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination">FAQ about moment of examination for teachers and students</a></span></p>
+                            <p><span style="font-size: 12pt;"><a style="color: #079C97;" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-examination">FAQ about the moment of examination for teachers and students</a></span></p>
                         </td>
                         <td style="width: 33.3033%; height: auto; text-align: center;">
                             <p><span style="font-size: 12pt;"><a style="color: #079C97;" href="https://canvas.uva.nl/courses/8175/pages/testvision-instructions-%7C-assessment">How to review the exam and adjust scores aferwards</a></span></p>
@@ -126,19 +126,20 @@
 
             <!-- Uitgebreide instructies -->
             <hr />
-            <p style="text-align: center;"><span style="color: #079C97; font-size: 13pt; float: middle;"><a style="color: #079C97;" href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><strong><em>Exstensive instructions</em></strong></a></span></p>
+            <br>
+            <p style="text-align: center;"><span style="color: #079C97; font-size: 13pt; float: middle;">This page is not fully updated yet. If any details are missing, please visit our
+            <a style="color: #079C97;" href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><strong><em>extensive instructions</em></strong></a>.</span></p>
 
         </div>
         <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 15px; height: auto; background-color: #fafafa;">
             <span style="color: #079C97;"><h5>Book an appointment with us!</h5></span>
-            <p>We have heard from teachers that an (online or onsite) appointment of 15-20 minutes works best: there is time to ask questions, to pass on changes and wishes regarding the test and to go through the qeustion menu in TestVision together with ICTO. A meeting with ICTO gives the teacher some security and we often hear: "actually, it's not that bad". So please do not hesistate to drop by our office, email us or book an appointment. Take a look at our <a href="https://canvas.uva.nl/courses/8175/pages/contact">contact page</a> to get in contact with us.</p>
+              <p>We have heard from teachers that an (online or onsite) appointment of 15-20 minutes works best: there is time to ask questions, to pass on changes and wishes regarding the test, and to go through the question menu in TestVision together with ICTO. A meeting with ICTO gives teachers some security and we often hear: "Actually, it's not that bad". So please do not hesistate to drop by our office, email us or book an appointment. Take a look at our <a href="https://canvas.uva.nl/courses/8175/pages/contact">contact page</a> to get in touch with us.</p>
         </div>
         <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 15px; height: auto; background-color: #fafafa;">
             <span style="color: #079C97;"><h5>What do I need to do?</h5></span>
             <p>The ICTO team sets up a copy of last year's exam with copies of last year's questions and test settings – or if this is your first time, we'll set up concept questions and assign basic settings to the exam.</p>
-            <p>Teachers are solely responsible for creating (modifying) the questions in TestVision. Questions can be changed by teachers until the last moment. A request for adding new questions to the test or changing test settings can be sent to ICTO up to one week before the start of the test. After the 1 week deadline, teachers can also work with this independently with detailed instructions.</p>
+            <p>Teachers are solely responsible for modifying the questions in TestVision. Questions can be changed by teachers until the last moment. A request for adding new questions to the test or changing test settings can be sent to ICTO up to one week before the start of the test. After this deadline, teachers can also do these things themselves with the help of a detailed instructions.</p>
         </div>
-        <p>&nbsp;</p>
     </div>
 
     <div id="tab-2" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
@@ -154,7 +155,7 @@
                                 <p><strong>&nbsp;</strong></p>
                             </td>
                             <td style="width: 56.2347%;">
-                                <div class="styleguide-section__grid-demo-element"><img id="4377529" style="margin-right: 8px; margin-bottom: 7px;" src="https://canvas.uva.nl/courses/8175/files/4377529/preview" alt="canvas-logo-1024x1020-1.png" width="28" height="28" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4377529" data-api-returntype="File" />
+                                <div class="styleguide-section__grid-demo-element">
                                     <ul class="pill" style="background: #858585; margin-top: 20px; margin-right: 8px;">
                                         <li><span style="color: #ffffff;"><strong>Test design</strong></span></li>
                                     </ul>
@@ -175,7 +176,7 @@
                     </tbody>
                 </table>
             </div>
-        <p>&nbsp;</p>
+
     </div>
 
 
