--- a/A-Z/Exams/TestVision/22-23/1_Questions+Test_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/1_Questions+Test_22-23.html
@@ -17,7 +17,7 @@
 
 
 <div>
-    <p style="text-align: center;">Thise page is not fully updated yet, please visit our <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><em>exstensive instruction</em></a> if details are missing.</p>
+    <p style="text-align: center;">This page is not fully updated yet, please visit our <a href="https://canvas.uva.nl/courses/8175/pages/overview-testvision-manuals"><em>exstensive instruction</em></a> if details are missing.</p>
     <hr />
     <table style="border-collapse: collapse; width: 98.1164%; border-style: hidden; height: 117px;" border="0">
         <tbody>
@@ -51,118 +51,103 @@
   <p><a id="topmenu"></a></p>
 
   <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 30px; padding-top: 35px; padding-bottom: 35px; height: auto; background-color: #fcfcfc;">
-      <p style="text-align: center;"><span style="font-size: 13pt;"><b>FAQ Teachers: questions</b></span></p>
+      <p style="text-align: center;"><span style="font-size: 13pt;"><b>FAQ Questions</b></span></p>
       <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_Q1">I'm working with TestVision for the first time. What does the general process look like?</a></span></p>
       <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_Q2">How can I edit a question?</a></span></p>
       <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_Q3">How can I change the name of a question?</a></span></p>
       <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_Q4">How can I add a question?</a></span></p>
+      <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_Q5">What kind of question types can I use?</a></span></p>
       <br>
-      <p style="text-align: center;"><span style="font-size: 13pt;"><b>FAQ Teachers: test</b></span></p>
+      <p style="text-align: center;"><span style="font-size: 13pt;"><b>FAQ Test</b></span></p>
       <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T1">Which basic settings are there in a test?</a></span></p>
       <p style="text-align: center;"><span style="font-size: 13pt;"><a href="#FAQ_T2">What if I'd like to use different settings in a test?</a></span></p>
-      <br>
-      <p style="text-align: center;"><span style="font-size: 13pt;"><b>FAQ Students</b></span></p>
-      <p style="text-align: center;"><span style="font-size: 13pt;"><a href="https://canvas.uva.nl/courses/28129/pages/testvision-faq-students" target=_blank>Share this page with students</a></span></p>
-  </div>
+      </div>
 
   <!-- FAQ Questions 1 -->
   <p>&nbsp;</p>
   <p><a id="FAQ_Q1"></a></p>
-  <p>&nbsp;</p>
-  <h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 3px;" href="https://canvas.uva.nl/courses/8175/pages/testvision"> <i class="icon-arrow-up"></i> <span>Back to TestVision Homepage</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a></h5>
-  <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
-  <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
-      <h4><strong>I'm working with TestVision for the first time. What does the general process look like?</strong></h4>
+  <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
+      <h4 style="text-align:center"><strong>I'm working with TestVision for the first time. What does the general process look like?</strong></h4>
+      <p style="padding:10px">The ICTO team sets up a copy of last year's exam with copies of last year's questions and test settings – or if this is your first time, we'll set up concept questions and assign basic settings to the exam.
+      <br><br>
+      Teachers are solely responsible for modifying the questions in TestVision. Questions can be changed by teachers until the last moment. A request for adding new questions to the test or changing test settings can be sent to ICTO up to one week before the start of the test. After this deadline, teachers can also do these things themselves with the help of a detailed instructions.</p>
+      <p>&nbsp;</p>
+      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
   </div>
-  <p>text</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
 
   <!-- FAQ Questions 2 -->
   <p>&nbsp;</p>
   <p><a id="FAQ_Q2"></a></p>
-  <p>&nbsp;</p>
-  <h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 3px;" href="https://canvas.uva.nl/courses/8175/pages/testvision"> <i class="icon-arrow-up"></i> <span>Back to TestVision Homepage</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a></h5>
-  <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
-  <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
-      <h4><strong>How can I edit a question?</strong></h4>
+  <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
+      <h4 style="text-align:center"><strong>How can I edit a question?</strong></h4>
+      <p style="padding:10px">Go to TestVision and login via <i>SURFconext</i>. Click on the menu <i><u>Questions</u></i> and select the right folder of the course on the left. If you don't have access to your course yet, please <a href="https://canvas.uva.nl/courses/8175/pages/contact">contact ICTO</a>.
+      <ul>
+        <li>Double-click the question you'd like to edit. You can write down the question text in the input field beneath 'Stem'. </li>
+        <li>In the menu on the right, you can adjust the question properties: for instance, the number of points, the option to randomize the order in which answer options are shown (MC questions), and the possibility to show a word count (open questions). </li>
+        <li>Beware! If you have open questions, you will always have to fill in grading criteria at the bottom of the page. You can also use multiple criteria (a check-up model) for subsections that make up an essay question. </li>
+      </ul>
+      <br>
+      Don't forget to save your changes by clicking on <i><u>Save</u></i> at the top of the screen.
+      </p>
+      <p>&nbsp;</p>
+      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
   </div>
-  <p>text</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
 
   <!-- FAQ Questions 3 -->
   <p>&nbsp;</p>
   <p><a id="FAQ_Q3"></a></p>
-  <p>&nbsp;</p>
-  <h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 3px;" href="https://canvas.uva.nl/courses/8175/pages/testvision"> <i class="icon-arrow-up"></i> <span>Back to TestVision Homepage</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a></h5>
-  <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
-  <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
-      <h4><strong>How can I change the name of a question?</strong></h4>
+  <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
+      <h4 style="text-align:center"><strong>How can I change the name of a question?</strong></h4>
+      <p style="padding:10px">Go to TestVision and login via <i>SURFconext</i>. Click on the menu <i><u>Questions</u></i> and select the right folder of the course on the left. If you don't have access to your course yet, please <a href="https://canvas.uva.nl/courses/8175/pages/contact">contact ICTO</a>.
+      <br><br>
+      Go to the question you'd like to rename and right click on it. Select <i><u>Rename</u></i>. You can also select the question and press w on your keyboard.
+      <p>&nbsp;</p>
+      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
   </div>
-  <p>text</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
 
   <!-- FAQ Questions 4 -->
   <p>&nbsp;</p>
   <p><a id="FAQ_Q4"></a></p>
-  <p>&nbsp;</p>
-  <h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 3px;" href="https://canvas.uva.nl/courses/8175/pages/testvision"> <i class="icon-arrow-up"></i> <span>Back to TestVision Homepage</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a></h5>
-  <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
-  <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
-      <h4><strong>How can I add a question?</strong></h4>
+  <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
+      <h4 style="text-align:center"><strong>How can I add a question?</strong></h4>
+      <p style="padding:10px">Go to TestVision and login via <i>SURFconext</i>. Click on the menu <i><u>Questions</u></i> and select the right folder of the course on the left. If you don't have access to your course yet, please <a href="https://canvas.uva.nl/courses/8175/pages/contact">contact ICTO</a>.
+      <br><br>
+      Select <i><u>+New</u></i> in the top left corner. You can also press n on your keyboard. A new question will open. Choose the type of question you want to create at the top of the screen. On <a href="https://uva.testvision.nl/help/en/html/vraagvormen.html">this page</a>, you can read more about the available question types.
+      <p>&nbsp;</p>
+      <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
   </div>
-  <p>text</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
+
+<!-- FAQ Questions 5 -->
+<p>&nbsp;</p>
+<p><a id="FAQ_Q5"></a></p>
+<div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
+    <h4 style="text-align:center"><strong>What kind of question types can I use? </strong></h4>
+    <p style="padding:10px">In the settings at the top of each question, you can choose the question type. Generally, multiple choice and open questions are used most often. On the <a href="https://uva.testvision.nl/help/en/html/vraagvormen.html">following page</a>, you can find all other question types that are available.
+    <ul>
+      <li>For more details and information on how to enter <b>MC questions</b>, click <a href="https://uva.testvision.nl/help/en/html/een-een-uit-meervraag_-meer-ui.html">here</a>.</li>
+      <li>For more details and information on how to enter <b>open questions</b>, click <a href="https://uva.testvision.nl/help/en/html/een-open-vraag-bewerken.html">here</a>.</li>
+    </ul>
+    </p>
+    <p>&nbsp;</p>
+    <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
+</div>
 
   <!-- FAQ Test 1 -->
-  <p>&nbsp;</p>
-  <p><a id="FAQ_T1"></a></p>
-  <p>&nbsp;</p>
-  <h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 3px;" href="https://canvas.uva.nl/courses/8175/pages/testvision"> <i class="icon-arrow-up"></i> <span>Back to TestVision Homepage</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a></h5>
-  <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
-  <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
-      <h4><strong>Which basic settings are there in a test?</strong></h4>
-  </div>
-  <p>text</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
+<p>&nbsp;</p>
+<p><a id="FAQ_T1"></a></p>
+<div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
+    <h4 style="text-align:center"><strong>Which basic settings are there in a test?</strong></h4>
+    <p style="padding:10px">text</p>
+    <p>&nbsp;</p>
+    <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
+</div>
 
   <!-- FAQ Test 2 -->
   <p>&nbsp;</p>
   <p><a id="FAQ_T2"></a></p>
+  <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #F2F2F2; background-color: #F2F2F2">
+      <h4 style="text-align:center"><strong>What if I'd like to use different settings in a test?</strong></h4>
+  <p style="padding:10px">text</p>
   <p>&nbsp;</p>
-  <h5 style="text-align: center;"><a class="btn Button" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a> <a class="btn Button" style="margin: 3px;" href="https://canvas.uva.nl/courses/8175/pages/testvision"> <i class="icon-arrow-up"></i> <span>Back to TestVision Homepage</span> </a> <a class="btn Button" style="margin: 5px; float: center;" href="https://canvas.uva.nl/courses/8175" target="_blank" rel="noopener" data-api-returntype="Page"><i class="icon-home"></i> <span>&nbsp;Home</span> </a></h5>
-  <hr style="height: 1px; border: none; color: #333; background-color: #333;" />
-  <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fbfbfc; text-align: center;">
-      <h4><strong>What if I'd like to use different settings in a test?</strong></h4>
-  </div>
-  <p>text</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
-  <p>&nbsp;</p>
+  <h5 style="text-align: center;"><a class="Button Button--active" style="margin: 5px; float: center;" href="#topmenu"><i class="icon-arrow-up"></i> <span>&nbsp;Back to top</span> </a>
+</div>
